<resources>
    <string name="app_name">Family Map Client</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="server_IP_address">Server IP Address:</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="login">Login</string>
    <string name="PortNumber">Port Number:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="register">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="filters">Filters</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="father_side_events">Father\'s Side Events</string>
    <string name="mother_side_events">Mother\'s Side Events</string>
    <string name="male_events">Male Events</string>
    <string name="female_events">Female Events</string>
    <string name="log_out">LOG OUT</string>
    <string name="summary_logout">Return to login screen</string>
    <string name="click_on_an_icon_to_see_details">Click on an icon to see details</string>
    <string name="title_activity_search">SearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_out_key">log_out_key</string>
    <string name="events_title">Events</string>
    <string name="persons_title">Persons</string>
    <string name="event_view">Event View</string>
    <string name="person_activity">Person View</string>
    <string name="search_activity">Search</string>
    <string name="settings_activity">Settings</string>
</resources>