<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:stretchColumns="3">
        <TableRow>
            <TextView
                android:text="@string/server_IP_address"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/server_IP_address"
                android:layout_span="3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.0.2.2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/PortNumber"
                android:gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/server_port_number"
                android:layout_span="3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8080"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/username"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/username"
                android:layout_span="3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="username"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/password"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/password"
                android:layout_span="3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="password"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/first_name"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_span="3"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/last_name"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_span="3"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Deere"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/email"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/email"
                android:layout_span="3"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="email@gmail.com"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/gender"
                android:layout_marginTop="12dp"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <LinearLayout
                android:gravity="left"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content">
                <RadioGroup
                    android:id="@+id/radioGender1"
                    android:orientation="horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/female_button"
                        android:text="@string/female"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:id="@+id/male_button"
                        android:text="@string/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
        </TableRow>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <Button
                android:id="@+id/login_button"
                android:gravity="center"
                android:text="@string/login"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/register_button"
                android:gravity="center"
                android:text="@string/register"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </TableLayout>
</ScrollView>